src/objects/Sync_Error_Log__c.object
<CustomObject>
    <description>Object to store data for any sync failure caused while sending data to third party like Elastic Search.</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sync_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>SF Id of the record which failed to sync.</description>
        <externalId>true</externalId>
        <inlineHelpText>SF Id of the record which failed to sync.</inlineHelpText>
        <label>Record Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; + Record_Id__c , &apos;Click here&apos;)</formula>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elastic Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sync Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Record_Link__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_failures</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Record_Link__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s failures</label>
    </listViews>
    <nameField>
        <displayFormat>SELog-{00000000}</displayFormat>
        <label>Sync Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>